// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paths: createOpenApiDocs > object 1`] = `
{
  "/user": {
    "get": {
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "example": {
                  "hi": "hello",
                },
                "properties": {
                  "hi": {
                    "type": "string",
                  },
                },
                "required": [
                  "hi",
                ],
                "type": "object",
              },
            },
          },
          "description": "Great success",
        },
      },
    },
  },
}
`;

exports[`paths: createOpenApiDocs > properly handles multiple responses 1`] = `
{
  "200": {
    "content": {
      "application/json": {
        "schema": {
          "properties": {
            "wow": {
              "type": "string",
            },
          },
          "required": [
            "wow",
          ],
          "type": "object",
        },
      },
    },
    "description": "200 OK",
  },
  "400": {
    "content": {
      "application/json": {
        "schema": {
          "properties": {
            "error": {
              "type": "string",
            },
          },
          "required": [
            "error",
          ],
          "type": "object",
        },
      },
    },
    "description": "400 Bad Request",
  },
}
`;

exports[`paths: createOpenApiDocs > simple 1`] = `
{
  "/user": {
    "get": {
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "hi": {
                    "type": "string",
                  },
                },
                "required": [
                  "hi",
                ],
                "type": "object",
              },
            },
          },
          "description": "200 OK",
        },
      },
    },
  },
}
`;
